--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,93 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+.trafficlight{
+    background-color: rgb(0, 0, 0);
+    margin-left: auto;
+    margin-right: auto;
+    width:10px;
+    height:100px;
+}
+
+.trafficlight .container{
+    position:relative;
+    display:block;
+    background-color: rgb(0, 0, 0);
+    margin-left: auto;
+    margin-right: auto;
+    left:-20px;
+    top:100px;
+    width:100px;
+    height:200px;
+}
+
+.trafficlight .container .redlight button{
+
+    position:relative;
+    background-color: rgb(255, 0, 0);
+    border-radius: 50%;
+    width:75px;
+    height:60px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:5px;
+}
+
+.trafficlight .container .yellowlight button{
+    position:relative;
+    background-color:yellow;
+    border-radius: 50%;
+    width:75px;
+    height:60px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.trafficlight .container .greenlight button{
+    position:relative;
+    background-color: green;
+    border-radius: 50%;
+    width:75px;
+    height:60px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.trafficlight .container .redlightanimated button{
+
+    position:relative;
+    background-color: rgb(255, 0, 0);
+    border-radius: 50%;
+    width:75px;
+    height:60px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:5px;
+    box-shadow:
+    0 0 5px 1px #fff;
+}
+
+.trafficlight .container .yellowlightanimated button{
+    position:relative;
+    background-color:yellow;
+    border-radius: 50%;
+    width:75px;
+    height:60px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow:
+    0 0 5px 1px #fff;
+}
+
+.trafficlight .container .greenlightanimated button{
+    position:relative;
+    background-color: green;
+    border-radius: 50%;
+    width:75px;
+    height:60px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow:
+    0 0 5px 1px #fff;
+}
